FIX: Don't allow line breaks in fields containing forms (#82)
closes #82

--- a/pages/Search/Search.css
+++ b/pages/Search/Search.css
@@ -24,7 +24,7 @@
   text-align: center;
 }
 
-:is(.form, .source-forms) {
+:is(.form, .PA, .source-forms, .source-PA, .source-URs, .UR) {
   white-space: nowrap;
 }
 
